# telegram-notifier

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  action.yaml  pyproject.toml
.github/workflows/: selftest.yaml
src/telegram_notifier/: github_api.py  main.py  message_builder.py  models.py  telegram.py
tests/: test_github_api.py  test_main.py  test_message_builder.py
