[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_notifier"]

[project]
name = "telegram-notifier"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot>=22.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pyright",
    "respx",
    "ruff",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
